<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="model" type="com.mudassirkhan.realitygametask.model.rocket.RocketResponse"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                       android:orientation="vertical"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       android:background="@color/disable_color"
    >


        <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
                                                     android:text="@{model.rocketName}"
                                                     style="@style/BaseTextView.OpenSansRegular"
                                                     android:hint="@string/txt_rocket_name"
                                                     android:id="@+id/textView"
                                                     app:layout_constraintStart_toStartOf="parent"
                                                     android:layout_marginLeft="8dp"
                                                     android:layout_marginStart="8dp"
                                                     android:layout_marginTop="8dp"
                                                     app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
                                                     android:hint="@string/txt_rocket_company"
                                                     android:text="@{model.company}"
                                                     style="@style/BaseTextView.OpenSansRegular"
                                                     app:layout_constraintStart_toStartOf="parent"
                                                     android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                                                     android:layout_marginTop="8dp"
                                                     app:layout_constraintTop_toBottomOf="@+id/textView"
                                                     android:id="@+id/textView4"/>

        <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
                                                     android:hint="@string/txt_lunchpad_status"
                                                     android:text="@{model.active}"
                                                     style="@style/BaseTextView.OpenSansRegular"
                                                     app:layout_constraintEnd_toEndOf="parent"
                                                     android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                                                     app:layout_constraintTop_toTopOf="parent"
                                                     android:layout_marginTop="8dp" android:id="@+id/textView3"/>


        <androidx.appcompat.widget.AppCompatTextView android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:hint="@string/txt_rocket_country"
                                                     android:text="@{model.country}"
                                                     android:singleLine="true"
                                                     android:marqueeRepeatLimit="marquee_forever"
                                                     android:scrollHorizontally="true"
                                                     android:ellipsize="marquee"
                                                     android:focusable="true"
                                                     android:focusableInTouchMode="true"
                                                     style="@style/BaseTextView.RalewayRegular"
                                                     app:layout_constraintTop_toBottomOf="@+id/textView4"
                                                     app:layout_constraintStart_toStartOf="parent"
                                                     app:layout_constraintEnd_toEndOf="parent"
                                                     android:layout_marginEnd="8dp"
                                                     android:layout_marginRight="8dp" android:id="@+id/textView5"
                                                     android:layout_marginStart="8dp"
                                                     android:layout_marginLeft="8dp"
                                                     android:layout_marginTop="8dp"
                                                     app:layout_constraintHorizontal_bias="0.0"/>

        <androidx.appcompat.widget.AppCompatTextView android:layout_width="0dp" android:layout_height="wrap_content"

                                                     style="@style/BaseTextView"
                                                     android:hint="@string/txt_detail"
                                                     android:text="@{model.description}"
                                                     app:layout_constraintEnd_toEndOf="parent"
                                                     android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                                                     android:layout_marginTop="8dp"
                                                     app:layout_constraintStart_toStartOf="parent"
                                                     android:layout_marginLeft="8dp"
                                                     android:layout_marginStart="8dp"
                                                     app:layout_constraintTop_toBottomOf="@+id/textView5"
                                                     android:id="@+id/textView6"/>


        <androidx.appcompat.widget.AppCompatTextView android:layout_width="0dp" android:layout_height="wrap_content"
                                                     android:text="@{model.wikipedia}"
                                                     android:hint="@string/txt_wiki"
                                                     android:autoLink="web"
                                                     app:layout_constraintTop_toBottomOf="@+id/textView6"
                                                     android:layout_marginTop="8dp"
                                                     android:layout_marginBottom="8dp"
                                                     app:layout_constraintEnd_toEndOf="parent"
                                                     android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                                                     app:layout_constraintStart_toStartOf="parent"
                                                     android:layout_marginLeft="8dp"
                                                     android:layout_marginStart="8dp"
                                                     app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
